# safe_file_walker

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  safe_file_walker.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
docs/: index.html
examples/: README.md  basic_usage.py  security_scanner.py
tests/: test_safe_file_walker.py
