[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-file-walker"
version = "1.0.0"
description = "Secure filesystem traversal with hardlink deduplication and DoS protection"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "saiconfirst", email = "saiconfirst@gmail.com"}]  
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Filesystems",
]
keywords = ["filesystem", "security", "traversal", "hardlink", "symlink"]

[project.urls]
Homepage = "https://github.com/saiconfirst/safe_file_walker"