[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-file-walker"
version = "1.0.0"
description = "Secure filesystem traversal for Python with hardlink deduplication, rate limiting, and DoS protection"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "saiconfirst", email = "your.email@example.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Filesystems"
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/saiconfirst/safe_file_walker"
Repository = "https://github.com/saiconfirst/safe_file_walker"
